--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -476,9 +476,9 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.8);
-  z-index: 2;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.8);
+  /* z-index: 2; */
   cursor: pointer;
     background-repeat: no-repeat;
   background-size: cover;
