--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -36,7 +36,7 @@
     height: 100vh;
     width: 100vw;
     background-repeat: no-repeat;
-    background-size: 300%;
+    background-size: 500%;
 }
 
 .bgblur::before {
@@ -631,3 +631,43 @@
         margin-right: calc((80vw - (100vw/2)) / -2);
     }
 }
+
+@media only screen and (max-width: 1100px){
+  .bg, .bg2, .bg3, .bg4{
+        background-size: 200%;
+    }
+} 
+
+@media only screen and (max-width: 849px)
+{
+    .bg, .bg2, .bg3, .bg4{
+        background-size: 250%;
+    }
+}
+@media only screen and (max-width: 700px)
+{
+    .bg, .bg2, .bg3, .bg4{
+        background-size: 300%;
+    }
+}
+@media only screen and (max-width: 560px)
+{
+    .bg, .bg2, .bg3, .bg4{
+        background-size: 400%;
+    }
+}
+
+@media only screen and (max-width: 550px){
+  .bg, .bg2, .bg3, .bg4{
+        background-size: 450%;
+    }
+}
+
+
+
+@media only screen and (max-width: 350px){
+  .bg, .bg2, .bg3, .bg4{
+        background-size: 500%;
+    }
+}
+
