--- a/Workspace/HomeScreen/style.css
+++ b/Workspace/HomeScreen/style.css
@@ -72,11 +72,11 @@
 
 
 
-/* @media only screen and (max-height: 900px) and (orientation: landscape)
+@media only screen and (max-height: 500px) and (orientation: landscape)
 {
     .main-megatron-buttons{
-        height: 30vh;
-        bottom: 55%;
+        scale: 0.7;
+        bottom: 30%;
     }
 }
 @media only screen and (max-height: 410px) and (orientation: landscape)
@@ -85,7 +85,13 @@
         scale: 0.5;
         bottom: 50%;
     }
-} */
+}
+@media only screen and (max-height: 392px) and (orientation: landscape)
+{
+    .main-megatron-buttons{
+        bottom: 30% !important;
+    }
+}
 @media only screen and (max-width: 1100px)
 {
     .main-megatron-first-button img{
@@ -93,10 +99,6 @@
     }
    
     .moving-hero{
-        /* max-height: 70vh; */
-        /* padding: 50%; */
-        /* top: 50%; */
-        /* bottom: 20vh; */
         height: 70vh;
     }
     .main-megatron-buttons div{
