--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -439,8 +439,25 @@
   color: #FFFFFF;
   text-shadow: 0px 0px 50px #000000;
 }
+.wind{
+    background: url('Images/whitewind.svg');
+}
+.flame{
+    background: url('Images/whiteflame.svg');
+}
+.elect{
+    background: url('Images/whiteelect.svg');
+}
+.light{
+    background: url('Images/whitelight.svg');
+}
+.ice{
+    background: url('Images/whiteice.svg');
+}
+.water{
+    background: url('Images/whitewater.svg');
+}
 .desc .element{
-  background: url('Images/whitewind.svg');
   background-size: contain;
   background-repeat: no-repeat;
   width: 20vw;
@@ -466,6 +483,7 @@
   background-repeat: no-repeat;
   right: 25px;
   top: 25px;
+  cursor: pointer;
 }
 .overlay {
   display: flex;
@@ -488,7 +506,7 @@
    z-index: 2000;
    transition: .5s;
 }
-.overlay .bg{
+.overlay .mybg,.eebg,.asbg,.mrbg{
   position: absolute;
   top: 0;
   bottom: 0;
@@ -500,6 +518,15 @@
   background-size: cover !important;
   background: url('Images/myramid-pic.png');
    clip-path: polygon(0 0, 100% 0, 100% 100%, 24% 100%);
+}
+.overlay .mrbg{
+    background: url('Images/mrbg.svg');
+}
+.overlay .eebg{
+    background: url('Images/eexorbg.svg');
+}
+.overlay .asbg{
+    background: url('Images/asbg.svg');
 }
 .overlay img{
   position: absolute;
