--- a/Workspace/MapScreen/style.css
+++ b/Workspace/MapScreen/style.css
@@ -201,37 +201,50 @@
   top: 25px;
   cursor: pointer;
 }
+.dimmer{
+  position: fixed;
+  background-color: black;
+  border: solid yellow;
+}
 .bg-ovly{
 
   position: fixed;
-  background: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(25px);
-  -webkit-backdrop-filter: blur(25px);
+    background-color: rgba(0,0,0,0.5);
   
-  border-radius: 10px;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  
+}
+.bg-ovly2{
   top: 2.5vh;
   left: 15vw;
-  height: 95vh;
+  position: fixed;
   width: 70vw;
+  height: 95vh;
   display: flex;
   flex-direction: column;
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
   align-items: center;
   overflow-y: auto;
+  border-radius: 10px;
 }
-.bg-ovly::-webkit-scrollbar {
+.bg-ovly2::-webkit-scrollbar {
   width: 10px;
   border-radius: 10px;
 }
-.bg-ovly::-webkit-scrollbar-track {
+.bg-ovly2::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
 }
-.bg-ovly::-webkit-scrollbar-thumb {
+.bg-ovly2::-webkit-scrollbar-thumb {
   background: #D3B032; 
   border-radius: 10px;
 }
 
-.bg-ovly::-webkit-scrollbar-thumb:hover {
+.bg-ovly2::-webkit-scrollbar-thumb:hover {
   background: #a58a26; 
   border-radius: 10px;
 }
